cmake_minimum_required(VERSION 3.3)
project(nes CXX)
# target_include_directories(nes PRIVATE include)
AUX_SOURCE_DIRECTORY(src exec) 
AUX_SOURCE_DIRECTORY(src/sdl exec)
link_directories(./external/SDL2/lib)
include_directories(./external/SDL2/include)
add_executable(nes ${exec})
target_include_directories(nes SYSTEM PRIVATE "${SDL2_INCLUDE_DIR}")
target_link_libraries(nes mingw32 SDL2Main SDL2)